[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "tick clock"
edition = "2018"
license-file = "LICENSE"
name = "async-tick"
readme = "./README.md"
repository = "https://github.com/rise0chen/clock_source.git"
version = "0.1.0"

[dependencies]
tick_clock = {version = "0.1", path = "../tick_clock"}
