[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "tick clock"
edition = "2018"
license-file = "LICENSE"
name = "async-tick"
readme = "./README.md"
repository = "https://github.com/rise0chen/clock_source.git"
version = "0.1.2"

[features]
default = ["std"]
std = []

[dependencies]
ach-lazy = "0.1"
async_ach-waker = "0.1"
futures-util = "0.3"
tick_clock = {version = "0.1", path = "../tick_clock"}

[dev-dependencies]
futures-executor = "0.3"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--cfg", "docsrs"]
