[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "set a common clock source"
edition = "2018"
license-file = "LICENSE"
name = "clock_source"
readme = "./README.md"
repository = "https://github.com/rise0chen/clock_source.git"
version = "0.2.4"

[features]
custom = []
default = []

[dependencies]
cfg-if = "1.0"

[target.'cfg(not(target_os = "none"))'.dependencies]
time-clock = {version = "0.1", path = "../time_clock"}
