[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "tick clock"
edition = "2018"
license-file = "LICENSE"
name = "tick_clock"
readme = "./README.md"
repository = "https://github.com/rise0chen/clock_source.git"
version = "0.1.2"

[dependencies]
clock_source = {version = "0.2", features = ["custom"], path = "../clock_source"}
